# chat-engine

./: .claudeignore  .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  chat-plan.md  docker-compose.yml  realtime-chat-platform.md  server.py
.cursor/rules/: 00-core.mdc  10-backend.mdc  11-backend-models.mdc  12-backend-routers.mdc  13-backend-tests.mdc  20-frontend.mdc  21-frontend-components.mdc  30-infra.mdc  40-workflow.mdc  99-mdc-format.mdc
backend/: .dockerignore  AGENTS.md  Dockerfile  Makefile  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8d399ac5f71a_initial_schema.py  a1b2c3d4e5f6_add_channel_deleted_at.py
backend/scripts/: seed.py
backend/src/app/: config.py  database.py  dependencies.py  main.py
backend/src/app/models/: __init__.py  attachment.py  channel.py  membership.py  message.py  reaction.py  user.py
backend/src/app/routers/: auth.py  channels.py  dm.py  messages.py  users.py  ws.py
backend/src/app/schemas/: auth.py  channels.py  dm.py  messages.py  users.py  ws.py
backend/src/app/services/: auth.py  connection_manager.py  dm.py  pubsub.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_channels.py  test_dm.py  test_health.py  test_messages.py  test_project_config.py  test_users.py  test_ws.py
docs/: ARCHITECTURE.md  BACKLOG.md  CONVENTIONS.md  OPERATIONS.md  PROGRESS.md
frontend/: .dockerignore  .eslintrc.json  AGENTS.md  Dockerfile  Makefile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/src/: auth.ts  middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/contexts/: PresenceContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: useMessages.ts  useTypingIndicator.ts  useWebSocket.ts
frontend/src/lib/: api.ts  query-keys.ts
infra/: AGENTS.md
static/: index.html
(+21 files in other folders)
